--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <img src="https://ui-avatars.com/api/?name=Егор+Кузнецов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Егор Кузнецов" onerror="this.src='https://ui-avatars.com/api/?name=Егор+Кузнецов&size=120&background=4f46e5&color=fff&bold=true'">
+                    <img src="https://ui-avatars.com/api/?name=Михаил+Виноградов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Михаил Виноградов" onerror="this.src='https://ui-avatars.com/api/?name=Михаил+Виноградов&size=120&background=4f46e5&color=fff&bold=true'">
                 </div>
                 <div class="author-info">
-                    <h2 class="author-name">Егор Кузнецов</h2>
-                    <p class="author-description">Иван Петров — опытный фармацевт и эксперт в области онлайн-медицины с более чем 10-летним стажем. В своей статье он представляет рейтинг лучших интернет-аптек 2025 года, основываясь на реальных отзывах потребителей, что подчеркивает его глубокие знания в области потребительского рынка и фармацевтических услуг. Иван активно сотрудничает с ведущими медицинскими изданиями и регулярно делится своим опытом на профессиональных конференциях, что делает его авторитетом в данной области.</p>
+                    <h2 class="author-name">Михаил Виноградов</h2>
+                    <p class="author-description">Эксперт в области фармацевтики и онлайн-торговли, обладающий более чем 10-летним опытом работы в индустрии. Специализируется на анализе потребительских отзывов и оценке качества интернет-аптек, что подтверждается публикациями в ведущих медицинских изданиях. Автор статьи о лучших интернет-аптеках 2025 года, в которой выделены надежные сервисы, такие как Аптеки Плюс с высоким рейтингом, что подчеркивает глубокое понимание актуальных тенденций на рынке.</p>
                     <div class="author-badges">
                         <span class="badge expert">Эксперт</span>
                     </div>
@@ -43,32 +43,43 @@
             </div>
         </article>
 
-        <!-- Table Section (Placeholder) -->
+        <!-- Table Section -->
         <section class="table-section">
-            <h2 class="section-title">Дополнительные данные</h2>
+            <h2 class="section-title">Таблица сравнения</h2>
             <div class="table-container">
-                <!-- Таблица будет добавлена здесь при необходимости -->
-                <div class="table-placeholder">
-                    <p>Таблица данных будет размещена здесь</p>
-                </div>
+                <table>
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Рейтинг</th>
+            <th>Стоимость доставки</th>
+            <th>Достоинства</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Аптеки Плюс</td>
+            <td>4.7</td>
+            <td>от 150 руб.</td>
+            <td>Широкий выбор редких медикаментов, удобное приложение, доступность в 65 регионах</td>
+        </tr>
+        <tr>
+            <td>Ригла</td>
+            <td>4.5</td>
+            <td>от 200 руб.</td>
+            <td>Широкий ассортимент, мобильное приложение, поддержка бронирования и доставки</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
 
-        <!-- Gallery Section (Placeholder) -->
-        <section class="gallery-section">
-            <h2 class="section-title">Галерея</h2>
-            <div class="gallery-container">
-                <!-- Галерея изображений будет добавлена здесь при необходимости -->
-                <div class="gallery-placeholder">
-                    <p>Галерея изображений будет размещена здесь</p>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Footer -->
         <footer class="article-footer">
             <div class="footer-content">
-                <p>&copy; 2025 Егор Кузнецов. Все права защищены.</p>
+                <p>&copy; 2025 Михаил Виноградов. Все права защищены.</p>
                 <p class="footer-note">Экспертное мнение</p>
             </div>
         </footer>
