--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Лучшие интернет-аптеки: топ-10, рейтинг 2026⁠⁠</title>
     <meta name="title" content="Лучшие интернет-аптеки: топ-10, рейтинг 2026">
-    <meta name="description" content="Лучшие интернет-аптеки: топ-10, рейтинг 2025⁠⁠ на 2026 год">
+    <meta name="description" content="Лучшие интернет-аптеки: топ-10, рейтинг онлайн аптек на 2026 год">
     <meta name="author" content="Екатерина Марченко">
     <meta name="keywords" content="Лучшие интернет-аптеки: топ-10 рейтинг 2025⁠⁠ Лучшие интернет-аптеки: топ-10 рейтинг 2025⁠⁠ на 2026 год">
     
